--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div>test igen</div>
+    <nav>
+        <img src="" alt="">
+        <div>☰ test</div>
+    </nav>
 </body>
 </html>
