--- a/index.html
+++ b/index.html
@@ -1,15 +1,61 @@
+<!-- Unicode: Đ ☰ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="Stylesheet" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Deliver | Home</title>
 </head>
 <body>
     <nav>
-        <img src="" alt="">
-        <div>☰ test</div>
+        <img src="img/Deliver-v-logo.png" alt="">
+        <div>☰</div>
     </nav>
+    <div style="background-color: #1a1a1a;">
+        <header>
+            <h1>
+                JUST DO IT
+            </h1>
+        </header>
+        <p class="intro">We Create Courageous Websites That <span style="color:#e9c534">Empower Companies</span> and <span style="color:#e9c534">Move People To Take Action</span>.</p>
+    </div>
+    <div class="container">
+        <div>
+            <div class="phone-head">
+                <h2>Make It <span style="color:#00a19b">Đeliver</span></h2>
+                <p>This is What We Do.</p>
+            </div>
+            <div class="grid">
+                <div>
+                    <h2 style="color: #00a19b;">01</h2>
+                    <img class="icon" src="img/lightbulb.png" alt="">
+                    <p>Web Development</p>
+                    <a href="">Learn More ›</a>
+                </div>
+                <div>
+                    <h2 style="color: #00a19b;">02</h2>
+                    <img class="icon" src="img/social.png" alt="">
+                    <p>Social Media Marketing</p>
+                    <a href="">Learn More ›</a>
+                </div>
+                <div>
+                    <h2 style="color: #00a19b;">03</h2>
+                    <img class="icon" src="img/server.png" alt="">
+                    <p>Server Hosting</p>
+                    <a href="">Learn More ›</a>
+                </div>
+                <div class="phone">
+                    <img src="img/phone.png" alt="">
+                    <div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
