Fortsatt arbete på telefon grejen

--- a/index.html
+++ b/index.html
@@ -21,41 +21,54 @@
                 JUST DO IT
             </h1>
         </header>
-        <p class="intro">We Create Courageous Websites That <span style="color:#e9c534">Empower Companies</span> and <span style="color:#e9c534">Move People To Take Action</span>.</p>
+        <p class="intro">We Create Courageous Websites That <span>Empower Companies</span> and <span>Move People To Take Action</span>.</p>
     </div>
     <div class="container">
-        <div>
-            <div class="phone-head">
-                <h2>Make It <span style="color:#00a19b">Đeliver</span></h2>
-                <p>This is What We Do.</p>
-            </div>
-            <div class="grid">
-                <div>
-                    <h2 style="color: #00a19b;">01</h2>
+        <div class="phone-head">
+            <h2>Make It <span style="color:#00a19b">Đeliver</span></h2>
+            <p>This is What We Do.</p>
+        </div>
+        <div class="grid">
+            <div>
+                <h2 style="color: #335A96;">01</h2>
+                <div class="service">
                     <img class="icon" src="img/lightbulb.png" alt="">
                     <p>Web Development</p>
                     <a href="">Learn More ›</a>
                 </div>
-                <div>
-                    <h2 style="color: #00a19b;">02</h2>
+            </div>
+            <div>
+                <h2 style="color: #E9C534;">02</h2>
+                <div class="service">
                     <img class="icon" src="img/social.png" alt="">
                     <p>Social Media Marketing</p>
                     <a href="">Learn More ›</a>
                 </div>
-                <div>
-                    <h2 style="color: #00a19b;">03</h2>
+            </div>
+            <div>
+                <h2 style="color: #FA4D3C;">03</h2>
+                <div class="service">
                     <img class="icon" src="img/server.png" alt="">
                     <p>Server Hosting</p>
                     <a href="">Learn More ›</a>
                 </div>
-                <div class="phone">
-                    <img src="img/phone.png" alt="">
-                    <div>
+            </div>
+            <div class="phone">
+                <img src="img/phone.png" alt="">
+                <div class="screen">
 
-                    </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div>
+        <h2>PORTFOLIO</h2>
+        <p>
+            Take a look at the projects we have collaborated in. We put our blood, 
+            sweat and tears into these works to make something we are proud of. 
+            Something <span>TRENDY</span>, <span>UNIQUE</span> and <span>BEUTIFUL</span>.
+        </p>
+        <div></div>
     </div>
 </body>
 </html>
