Fortsatt arbete på homepage

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <p class="intro">We Create Courageous Websites That <span>Empower Companies</span> and <span>Move People To Take Action</span>.</p>
     </div>
-    <div class="container">
+    <div class="phone-element">
         <div class="phone-head">
             <h2>Make It <span style="color:#00a19b">Đeliver</span></h2>
             <p>This is What We Do.</p>
@@ -61,14 +61,32 @@
             </div>
         </div>
     </div>
-    <div>
-        <h2>PORTFOLIO</h2>
-        <p>
-            Take a look at the projects we have collaborated in. We put our blood, 
-            sweat and tears into these works to make something we are proud of. 
-            Something <span>TRENDY</span>, <span>UNIQUE</span> and <span>BEUTIFUL</span>.
-        </p>
-        <div></div>
+    <div class="portfolio">
+            <div class="margin">
+            <h2>PORTFOLIO</h2>
+            <p class="margin">
+                Take a look at the projects we have collaborated in. We put our blood, 
+                sweat and tears into these works to make something we are proud of. 
+                Something <span>TRENDY</span>, <span>UNIQUE</span> and <span>BEUTIFUL</span>.
+            </p>
+            <div class="flexbox">
+                <a>
+                    <img src="img/paulinengarten.PNG" alt="">
+                    <div></div>
+                    <p>Paulinen Garten</p>
+                </a>
+                <a>
+                    <img src="img/outofthevalley.PNG" alt="">
+                    <div></div>
+                    <p>Out Of The Valley</p>
+                </a>
+                <a>
+                    <img src="img/amawastemanagement.png" alt="">
+                    <div></div>
+                    <p>AMA Waste Management</p>
+                </a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
