--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
                 Something <span>TRENDY</span>, <span>UNIQUE</span> and <span>BEUTIFUL</span>.
             </p>
             <div class="flexbox">
-                <a>
+                <a href="https://paulinengarten.de/">
                     <img src="img/paulinengarten.PNG" alt="">
                     <div></div>
                     <p>Paulinen Garten</p>
                 </a>
-                <a>
+                <a href="https://outofthevalley.co.uk/">
                     <img src="img/outofthevalley.PNG" alt="">
                     <div></div>
                     <p>Out Of The Valley</p>
                 </a>
-                <a>
+                <a href="https://www.amawaste.co.uk/">
                     <img src="img/amawastemanagement.png" alt="">
                     <div></div>
                     <p>AMA Waste Management</p>
@@ -88,5 +88,50 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="margin">
+            <div>
+                <div class="footer-elements">
+                    <img src="img/D-logo.png" alt="">
+                    <div>
+                        <h3>Services</h3>
+                        <a href=""><p>Web Development</p></a>
+                        <a href=""><p>Social Media Marketing</p></a>
+                        <a href=""><p>Server Hosting</p></a>
+                    </div>
+                    <div>
+                        <h3>Portfolio</h3>
+                        <a href=""><p>Web Development</p></a>
+                        <a href=""><p>Social Media Marketing</p></a>
+                        <a href=""><p>Server Hosting</p></a>
+                    </div>
+                    <a href="https://github.com/JakobLinn/Webbprojekt">
+                        <img style="width: 80%;" src="img/githublogo white.png" alt="">
+                        <h3>Visit Our Github!</h3>
+                    </a>
+                    <div>
+                        <img src="img/Deliver-v-logo.png" alt="">
+                        <p>information@deliver.com</p>
+                        <p>036-10 62 01</p>
+                        <p>Föreningsgatan 2, 55321 Jönköping</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-end">
+                <div>
+                    <img class="icon" src="img/copyright.png" alt="Copyright icon">
+                    <h3>Deliver Inc. 2021</h3>
+                </div>
+                <div>
+                    <a href="https://instagram.com"><img class="icon" src="img/instagram.png" alt="instagram icon"></a>
+                    <a href="https://twitter.com"><img class="icon" src="img/twitter.png" alt="twitter icon"></a>
+                    <a href="https://facebook.com"><img class="icon" src="img/facebook.png" alt="facebook icon"></a>
+                    <a href="https://linkedin.com"><img class="icon" src="img/linkedin.png" alt="linkedin icon"></a>
+                    <a href="https://reddit.com"><img class="icon" src="img/reddit.png" alt="reddit icon"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
