--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="Stylesheet" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
@@ -13,15 +18,15 @@
 <body>
     <nav>
         <img src="img/Deliver-v-logo.png" alt="">
-        <div>☰</div>
+        <div class="white-font">☰</div>
     </nav>
     <div style="background-color: #1a1a1a;">
-        <header>
+        <header style="width: 100%;">
             <h1>
                 JUST DO IT
             </h1>
         </header>
-        <p class="intro">We Create Courageous Websites That <span>Empower Companies</span> and <span>Move People To Take Action</span>.</p>
+        <p class="intro white-font">We Create Courageous Websites That <span>Empower Companies</span> and <span>Move People To Take Action</span>.</p>
     </div>
     <div class="phone-element">
         <div class="phone-head">
@@ -63,8 +68,8 @@
     </div>
     <div class="portfolio">
             <div class="margin">
-            <h2>PORTFOLIO</h2>
-            <p class="margin">
+            <h2 class="white-font">PORTFOLIO</h2>
+            <p class="margin white-font">
                 Take a look at the projects we have collaborated in. We put our blood, 
                 sweat and tears into these works to make something we are proud of. 
                 Something <span>TRENDY</span>, <span>UNIQUE</span> and <span>BEUTIFUL</span>.
@@ -73,20 +78,44 @@
                 <a href="https://paulinengarten.de/">
                     <img src="img/paulinengarten.PNG" alt="">
                     <div></div>
-                    <p>Paulinen Garten</p>
+                    <p class="white-font">Paulinen Garten</p>
                 </a>
                 <a href="https://outofthevalley.co.uk/">
                     <img src="img/outofthevalley.PNG" alt="">
                     <div></div>
-                    <p>Out Of The Valley</p>
+                    <p class="white-font">Out Of The Valley</p>
                 </a>
                 <a href="https://www.amawaste.co.uk/">
                     <img src="img/amawastemanagement.png" alt="">
                     <div></div>
-                    <p>AMA Waste Management</p>
+                    <p class="white-font">AMA Waste Management</p>
                 </a>
             </div>
         </div>
+    </div>
+
+    <div class="margin">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/css3logo.png" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/htmllogo.png" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/jslogo.png" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+    </div>
     </div>
 
     <footer>
@@ -95,20 +124,20 @@
                 <div class="footer-elements">
                     <img src="img/D-logo.png" alt="">
                     <div>
-                        <h3>Services</h3>
+                        <h3 class="white-font">Services</h3>
                         <a href=""><p>Web Development</p></a>
                         <a href=""><p>Social Media Marketing</p></a>
                         <a href=""><p>Server Hosting</p></a>
                     </div>
                     <div>
-                        <h3>Portfolio</h3>
-                        <a href=""><p>Web Development</p></a>
-                        <a href=""><p>Social Media Marketing</p></a>
-                        <a href=""><p>Server Hosting</p></a>
+                        <h3 class="white-font">Portfolio</h3>
+                        <a href="https://paulinengarten.de/"><p>Paulinen Garten</p></a>
+                        <a href="https://outofthevalley.co.uk/"><p>Out of the Valley</p></a>
+                        <a href="https://www.amawaste.co.uk/"><p>AMA Waste Management</p></a>
                     </div>
                     <a href="https://github.com/JakobLinn/Webbprojekt">
-                        <img style="width: 80%;" src="img/githublogo white.png" alt="">
-                        <h3>Visit Our Github!</h3>
+                        <img style="width: 80%;" src="img/githublogo-w.png" alt="">
+                        <h3 class="white-font">Visit Our Github!</h3>
                     </a>
                     <div>
                         <img src="img/Deliver-v-logo.png" alt="">
