--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -18,7 +18,7 @@
 <body>
     <nav>
         <img src="img/Deliver-v-logo.png" alt="">
-        <div class="white-font">☰</div>
+        <div class="text-white">☰</div>
     </nav>
     <div style="background-color: #1a1a1a;">
         <header style="width: 100%;">
@@ -26,11 +26,11 @@
                 JUST DO IT
             </h1>
         </header>
-        <p class="intro white-font">We Create Courageous Websites That <span>Empower Companies</span> and <span>Move People To Take Action</span>.</p>
+        <p class="intro text-white">We Create Courageous Websites That <span>Empower Companies</span> and <span>Move People To Take Action</span>.</p>
     </div>
     <div class="phone-element">
         <div class="phone-head">
-            <h2>Make It <span style="color:#00a19b">Đeliver</span></h2>
+            <h2>Make It <span class="text-primary">Đeliver</span></h2>
             <p>This is What We Do.</p>
         </div>
         <div class="grid">
@@ -60,16 +60,16 @@
             </div>
             <div class="phone">
                 <img src="img/phone.png" alt="">
-                <div class="screen">
+                <div class="screen bg-primary">
 
                 </div>
             </div>
         </div>
     </div>
-    <div class="portfolio">
+    <div class="centered-title bg-dark">
             <div class="margin">
-            <h2 class="white-font">PORTFOLIO</h2>
-            <p class="margin white-font">
+            <h2 class="text-white">PORTFOLIO</h2>
+            <p class="text-white w-75 mx-auto">
                 Take a look at the projects we have collaborated in. We put our blood, 
                 sweat and tears into these works to make something we are proud of. 
                 Something <span>TRENDY</span>, <span>UNIQUE</span> and <span>BEUTIFUL</span>.
@@ -78,66 +78,84 @@
                 <a href="https://paulinengarten.de/">
                     <img src="img/paulinengarten.PNG" alt="">
                     <div></div>
-                    <p class="white-font">Paulinen Garten</p>
+                    <p class="text-white">Paulinen Garten</p>
                 </a>
                 <a href="https://outofthevalley.co.uk/">
                     <img src="img/outofthevalley.PNG" alt="">
                     <div></div>
-                    <p class="white-font">Out Of The Valley</p>
+                    <p class="text-white">Out Of The Valley</p>
                 </a>
                 <a href="https://www.amawaste.co.uk/">
                     <img src="img/amawastemanagement.png" alt="">
                     <div></div>
-                    <p class="white-font">AMA Waste Management</p>
+                    <p class="text-white">AMA Waste Management</p>
                 </a>
             </div>
         </div>
     </div>
-
     <div class="margin">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="centered-title">
+            <h2>WE CREATE WITH</h2>
+        </div>
+    <div id="carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="1"></li>
+            <li data-target="#carousel" data-slide-to="2"></li>
+            <li data-target="#carousel" data-slide-to="3"></li>
+            <li data-target="#carousel" data-slide-to="4"></li>
+            <li data-target="#carousel" data-slide-to="5"></li>
+            <li data-target="#carousel" data-slide-to="6"></li>
+            <li data-target="#carousel" data-slide-to="7"></li>
+          </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/css3logo.png" alt="First slide">
+            <img class="d-block" src="img/tools/css3logo.png" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/htmllogo.png" alt="Second slide">
+            <img class="d-block" src="img/tools/htmllogo.png" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/jslogo.png" alt="Third slide">
+            <img class="d-block" src="img/tools/jslogo.png" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block" src="img/tools/bslogo.png" alt="Fourth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block" src="img/tools/fzlogo.png" alt="Fifth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block" src="img/tools/githublogo.png" alt="Sixth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block" src="img/tools/wordpresslogo.png" alt="Seventh slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block" src="img/tools/androidlogo.png" alt="Eighth slide">
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
     </div>
     </div>
-
-    <footer>
-        <div class="margin">
+    <footer class="border-primary">
+        <div class="w-75 mx-auto">
             <div>
                 <div class="footer-elements">
                     <img src="img/D-logo.png" alt="">
                     <div>
-                        <h3 class="white-font">Services</h3>
+                        <h3 class="text-white">Services</h3>
                         <a href=""><p>Web Development</p></a>
                         <a href=""><p>Social Media Marketing</p></a>
                         <a href=""><p>Server Hosting</p></a>
                     </div>
                     <div>
-                        <h3 class="white-font">Portfolio</h3>
+                        <h3 class="text-white">Portfolio</h3>
                         <a href="https://paulinengarten.de/"><p>Paulinen Garten</p></a>
                         <a href="https://outofthevalley.co.uk/"><p>Out of the Valley</p></a>
                         <a href="https://www.amawaste.co.uk/"><p>AMA Waste Management</p></a>
                     </div>
                     <a href="https://github.com/JakobLinn/Webbprojekt">
                         <img style="width: 80%;" src="img/githublogo-w.png" alt="">
-                        <h3 class="white-font">Visit Our Github!</h3>
+                        <h3 class="text-white">Visit Our Github!</h3>
                     </a>
                     <div>
                         <img src="img/Deliver-v-logo.png" alt="">
