--- a/about.html
+++ b/about.html
@@ -3,6 +3,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="Stylesheet" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
@@ -13,37 +18,58 @@
 <body>
     <nav>
         <img src="img/Deliver-v-logo.png" alt="">
-        <div class="white-font">☰</div>
+        <div class="text-white">☰</div>
     </nav>
-    <div style="background-color: white;">
-        <header>
+    <div>
+        <header style="width: 100%;">
             <h1>
-                HE LLO<span style="color: #00a19b;">.</span>
+                HE LLO<span class="text-primary">.</span>
             </h1>
         </header>
-        <p class="intro">We Are <span style="color:#00a19b">Đeliver</span>.</p>
+        <p class="intro">We Are <span class="text-primary">Đeliver</span>.</p>
     </div>
 
-    <footer>
+    <div class="centered-title bg-dark">
         <div class="margin">
+            <h2 class="text-white">ABOUT US</h2>
+            <p class="text-white w-75 mx-auto">
+                We are social and open minded individuals with an avid support for new discoveries. 
+                The Soul of our company lives in our team.
+            </p>
+            <p class="text-white">Now sit tight, while we have a timeline of our history to tell you.</p>
+        </div>
+    </div>
+
+    <div class="timeline bg-dark">
+        <div>
+            <h3 class="text-white">ABOUT US</h3>
+            <p class="text-white">Click or Drag to Explore</p>
+            <img src="#" alt="">
+            <img src="#" alt="">
+        </div>
+
+    </div>
+
+    <footer class="border-primary">
+        <div class="w-75 mx-auto">
             <div>
                 <div class="footer-elements">
                     <img src="img/D-logo.png" alt="">
                     <div>
-                        <h3 class="white-font">Services</h3>
+                        <h3 class="text-white">Services</h3>
                         <a href=""><p>Web Development</p></a>
                         <a href=""><p>Social Media Marketing</p></a>
                         <a href=""><p>Server Hosting</p></a>
                     </div>
                     <div>
-                        <h3 class="white-font">Portfolio</h3>
+                        <h3 class="text-white">Portfolio</h3>
                         <a href="https://paulinengarten.de/"><p>Paulinen Garten</p></a>
                         <a href="https://outofthevalley.co.uk/"><p>Out of the Valley</p></a>
                         <a href="https://www.amawaste.co.uk/"><p>AMA Waste Management</p></a>
                     </div>
                     <a href="https://github.com/JakobLinn/Webbprojekt">
                         <img style="width: 80%;" src="img/githublogo-w.png" alt="">
-                        <h3 class="white-font">Visit Our Github!</h3>
+                        <h3 class="text-white">Visit Our Github!</h3>
                     </a>
                     <div>
                         <img src="img/Deliver-v-logo.png" alt="">
@@ -68,6 +94,5 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
 </html>
