--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <img src="img/Deliver-v-logo.png" alt="">
         <div class="text-white">☰</div>
     </nav>
-    <div style="background-color: #1a1a1a;">
+
+    <div class="bg-dark">
         <header style="width: 100%;">
             <h1>
                 JUST DO IT
@@ -28,6 +29,7 @@
         </header>
         <p class="intro text-white">We Create Courageous Websites That <span>Empower Companies</span> and <span>Move People To Take Action</span>.</p>
     </div>
+
     <div class="phone-element">
         <div class="phone-head">
             <h2>Make It <span class="text-primary">Đeliver</span></h2>
@@ -66,8 +68,9 @@
             </div>
         </div>
     </div>
+
     <div class="centered-title bg-dark">
-            <div class="margin">
+        <div class="margin">
             <h2 class="text-white">PORTFOLIO</h2>
             <p class="text-white w-75 mx-auto">
                 Take a look at the projects we have collaborated in. We put our blood, 
@@ -93,48 +96,49 @@
             </div>
         </div>
     </div>
+    
     <div class="margin">
         <div class="centered-title">
             <h2>WE CREATE WITH</h2>
         </div>
-    <div id="carousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel" data-slide-to="1"></li>
-            <li data-target="#carousel" data-slide-to="2"></li>
-            <li data-target="#carousel" data-slide-to="3"></li>
-            <li data-target="#carousel" data-slide-to="4"></li>
-            <li data-target="#carousel" data-slide-to="5"></li>
-            <li data-target="#carousel" data-slide-to="6"></li>
-            <li data-target="#carousel" data-slide-to="7"></li>
-          </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block" src="img/tools/css3logo.png" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block" src="img/tools/htmllogo.png" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block" src="img/tools/jslogo.png" alt="Third slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block" src="img/tools/bslogo.png" alt="Fourth slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block" src="img/tools/fzlogo.png" alt="Fifth slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block" src="img/tools/githublogo.png" alt="Sixth slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block" src="img/tools/wordpresslogo.png" alt="Seventh slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block" src="img/tools/androidlogo.png" alt="Eighth slide">
-          </div>
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+                <li data-target="#carousel" data-slide-to="3"></li>
+                <li data-target="#carousel" data-slide-to="4"></li>
+                <li data-target="#carousel" data-slide-to="5"></li>
+                <li data-target="#carousel" data-slide-to="6"></li>
+                <li data-target="#carousel" data-slide-to="7"></li>
+            </ol>
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block" src="img/tools/css3logo.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="img/tools/htmllogo.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="img/tools/jslogo.png" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="img/tools/bslogo.png" alt="Fourth slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="img/tools/fzlogo.png" alt="Fifth slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="img/tools/githublogo.png" alt="Sixth slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="img/tools/wordpresslogo.png" alt="Seventh slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block" src="img/tools/androidlogo.png" alt="Eighth slide">
+            </div>
+            </div>
         </div>
-    </div>
     </div>
     <footer class="border-primary">
         <div class="w-75 mx-auto">
