Service sidorna är klara!

--- a/development.html
+++ b/development.html
@@ -13,45 +13,69 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deliver | About</title>
+    <title>Deliver | Web Development</title>
 </head>
 <body>
     <nav>
         <img src="img/Deliver-v-logo.png" alt="">
         <div class="text-white">☰</div>
     </nav>
-    <div>
-        <header class="w-100 space-between">
-            <h1 class="col-1 text-stroke">
-                HE LLO<span class="text-primary">.</span>
-            </h1>
-        </header>
-        <p class="intro">We Are <span class="text-primary">Đeliver</span>.</p>
-    </div>
 
-    <div class="text-center bg-dark">
-        <div class="margin">
-            <h2 class="text-white">ABOUT US</h2>
-            <p class="text-white w-75 mx-auto">
-                We are social and open minded individuals with an avid support for new discoveries. 
-                The Soul of our company lives in our team.
-            </p>
-            <p class="text-white">Now sit tight, while we have a timeline of our history to tell you.</p>
-        </div>
-    </div>
-
-    <div class="timeline bg-dark">
-        <div class="space-between px-5">
-            <h3 class="text-white">ABOUT US</h3>
+    <div class="bg-dark">
+        <header style="background-color: #335A96;" class="w-100 space-between">
             <div>
-                <p class="text-white d-inline-block">Click or Drag to Explore</p>
-                <img class="icon mx-3" src="img/arrow-l.png" alt="">
-                <img class="icon mx-3" src="img/arrow-r.png" alt="">
+                <div class="row w-75">
+                    <h2 class="text-white col-7 pl-0 pb-3">Beautiful Web Design</h2>
+                </div>
+                <div class="row w-75">
+                    <p class="col-8 text-white pl-0 pt-3">
+                        This is what we deliver. Every brand we help build, and every interaction we make must 
+                        not only look beautiful but must feel and function beautifully, too. Delivered in perfection.
+                    </p>
+                </div>
+            </div>
+        </header>
+        <div class="margin">
+            <div class="row">
+                <div class="col-8">
+                    <h2 class="text-white mb-5">IT'S ALL ABOUT THE CHEMISTRY</h2>
+                    <p class="text-white">The creation of a Website is one of the most important phases in the branding of a company.</p>
+                    <br>
+                    <p class="text-white">
+                        Originality, beautiful graphics, and great functionality are the three ultimate ingredients 
+                        used to make a concoction of quality web development. Our team of professionals will be able to 
+                        understand customer requests step by step, creating the website of their choosing geared to follow the 
+                        growth of their business. Explore our web design and contact us to start collaborating with us straight away. 
+                    </p>
+                </div>
+                <div class="bg-primary col">
+                    <!--animation-->
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col contact">
+                    <a class="text-white" href="contact.html">CONTACT US</a>
+                </div>
             </div>
         </div>
-
     </div>
 
+    <div class="text-center">
+        <div class="margin">
+            <img class="icon-l" src="img/cart.png" alt="">
+            <h2 class="border-short">YOUR DIGITAL WEB SHOP</h2>
+            <p class="w-75 mx-auto">
+                Create you E-commerce website with Deliver, 
+                we can build good looking and well performing web shops for all types of products. 
+                Collaborate with us, and we will create an e-business that allows you to sell your services directly on the web. 
+                Let yourself be surprised by what online commerce can bring to your business!
+            </p>
+            <div class="contact">
+                <a class="text-dark border-dark" href="contact.html">CONTACT US</a>
+            </div>
+        </div>
+    </div>
+    
     <footer class="border-primary">
         <div class="w-75 mx-auto">
             <div>
