--- a/social.html
+++ b/social.html
@@ -13,45 +13,70 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deliver | About</title>
+    <title>Deliver | Social Media Marketing</title>
 </head>
 <body>
     <nav>
         <img src="img/Deliver-v-logo.png" alt="">
         <div class="text-white">☰</div>
     </nav>
-    <div>
-        <header class="w-100 space-between">
-            <h1 class="col-1 text-stroke">
-                HE LLO<span class="text-primary">.</span>
-            </h1>
-        </header>
-        <p class="intro">We Are <span class="text-primary">Đeliver</span>.</p>
-    </div>
 
-    <div class="text-center bg-dark">
-        <div class="margin">
-            <h2 class="text-white">ABOUT US</h2>
-            <p class="text-white w-75 mx-auto">
-                We are social and open minded individuals with an avid support for new discoveries. 
-                The Soul of our company lives in our team.
-            </p>
-            <p class="text-white">Now sit tight, while we have a timeline of our history to tell you.</p>
-        </div>
-    </div>
-
-    <div class="timeline bg-dark">
-        <div class="space-between px-5">
-            <h3 class="text-white">ABOUT US</h3>
+    <div class="bg-dark">
+        <header style="background-color: #E9C534;" class="w-100 space-between">
             <div>
-                <p class="text-white d-inline-block">Click or Drag to Explore</p>
-                <img class="icon mx-3" src="img/arrow-l.png" alt="">
-                <img class="icon mx-3" src="img/arrow-r.png" alt="">
+                <div class="row w-75">
+                    <h2 class="text-white col-7 pl-0 pb-3">Social Media</h2>
+                </div>
+                <div class="row w-75">
+                    <p class="col-8 text-white pl-0 pt-3">
+                        The Media is the key to the future, a fundamental tool which every modern company requires. With your help, 
+                        we will bring your brand to the light and make it the topic that is on everyone’s lips.
+                    </p>
+                </div>
+            </div>
+        </header>
+        <div class="margin">
+            <div class="row">
+                <div class="col-8">
+                    <h2 class="text-white mb-5">THE SOCIAL EFFECT</h2>
+                    <p class="text-white">
+                        In the recent years, social media is becoming one of the most effective ways to grow your business. 
+                        If used correctly, social media can be a great boon to your brand.
+                    </p>
+                    <br>
+                    <p class="text-white">
+                        While it may seem simple, managing social platforms and planning concrete strategies requires the help of qualified experts. 
+                        Our professionals will be able to monitor the progress of your pages, analyze followers and insights, 
+                        providing you with a report of the results obtained every week. 
+                    </p>
+                </div>
+                <div class="bg-primary col">
+                    <!--animation-->
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col contact">
+                    <a class="text-white" href="contact.html">CONTACT US</a>
+                </div>
             </div>
         </div>
-
     </div>
 
+    <div class="text-center">
+        <div class="margin">
+            <img class="icon-l" src="img/network.png" alt="">
+            <h2 class="border-short">HOW WE'RE DIFFERENT</h2>
+            <p class="w-75 mx-auto">
+                Our social media marketing team is here to walk you through tried strategies that get results. 
+                Our strategies get your brand noticed, shared, talked about, liked and loved, 
+                no matter the social network, we have the know-how to get you the results your brand requires.
+            </p>
+            <div class="contact">
+                <a class="text-dark border-dark" href="contact.html">CONTACT US</a>
+            </div>
+        </div>
+    </div>
+    
     <footer class="border-primary">
         <div class="w-75 mx-auto">
             <div>
