--- a/hosting.html
+++ b/hosting.html
@@ -13,45 +13,69 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deliver | About</title>
+    <title>Deliver | Server Hosting</title>
 </head>
 <body>
     <nav>
         <img src="img/Deliver-v-logo.png" alt="">
         <div class="text-white">☰</div>
     </nav>
-    <div>
-        <header class="w-100 space-between">
-            <h1 class="col-1 text-stroke">
-                HE LLO<span class="text-primary">.</span>
-            </h1>
-        </header>
-        <p class="intro">We Are <span class="text-primary">Đeliver</span>.</p>
-    </div>
 
-    <div class="text-center bg-dark">
-        <div class="margin">
-            <h2 class="text-white">ABOUT US</h2>
-            <p class="text-white w-75 mx-auto">
-                We are social and open minded individuals with an avid support for new discoveries. 
-                The Soul of our company lives in our team.
-            </p>
-            <p class="text-white">Now sit tight, while we have a timeline of our history to tell you.</p>
-        </div>
-    </div>
-
-    <div class="timeline bg-dark">
-        <div class="space-between px-5">
-            <h3 class="text-white">ABOUT US</h3>
+    <div class="bg-dark">
+        <header style="background-color: #FA4D3C;" class="w-100 space-between">
             <div>
-                <p class="text-white d-inline-block">Click or Drag to Explore</p>
-                <img class="icon mx-3" src="img/arrow-l.png" alt="">
-                <img class="icon mx-3" src="img/arrow-r.png" alt="">
+                <div class="row w-75">
+                    <h2 class="text-white col-7 pl-0 pb-3">Server Hosting</h2>
+                </div>
+                <div class="row w-75">
+                    <p class="col-8 text-white pl-0 pt-3">
+                        A great service requires a great server host, and that is what we Deliver. We are committed to offer 360˚ 
+                        hosting services focused on getting results that drive you to attain a reputed market position and achieve many more milestones.
+                    </p>
+                </div>
+            </div>
+        </header>
+        <div class="margin">
+            <div class="row">
+                <div class="col-8">
+                    <h2 class="text-white mb-5">THE SERVER FOR YOU</h2>
+                    <p class="text-white">
+                        We make use of Top-Performing servers available to meet your every need. 
+                        Everything from quick and cheap Web Hosting that is perfect for your own homepage to Dedicated root servers with 
+                        excellent connection ready for any project.
+                    </p>
+                    <br>
+                    <p class="text-white">
+                        We guarantee a stress-free server connection. We'll take care of all the technicalities.
+                    </p>
+                </div>
+                <div class="bg-primary col">
+                    <!--animation-->
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col contact">
+                    <a class="text-white" href="contact.html">CONTACT US</a>
+                </div>
             </div>
         </div>
-
     </div>
 
+    <div class="text-center">
+        <div class="margin">
+            <img class="icon-l" src="img/server.png" alt="">
+            <h2 class="border-short">99% UP-TIME</h2>
+            <p class="w-75 mx-auto">
+                Our servers have a record of 99% up time. 
+                We make sure that you never miss any traffic with our reliable and authentic servers. 
+                We work hard to bring your project to light!
+            </p>
+            <div class="contact">
+                <a class="text-dark border-dark" href="contact.html">CONTACT US</a>
+            </div>
+        </div>
+    </div>
+    
     <footer class="border-primary">
         <div class="w-75 mx-auto">
             <div>
