--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </nav>
 
     <div class="bg-dark">
-        <header style="width: 100%;">
-            <h1>
+        <header class="w-100 space-between">
+            <h1 class="text-stroke col-1">
                 JUST DO IT
             </h1>
         </header>
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <div class="centered-title bg-dark">
+    <div class="text-center bg-dark">
         <div class="margin">
             <h2 class="text-white">PORTFOLIO</h2>
             <p class="text-white w-75 mx-auto">
@@ -77,7 +77,7 @@
                 sweat and tears into these works to make something we are proud of. 
                 Something <span>TRENDY</span>, <span>UNIQUE</span> and <span>BEUTIFUL</span>.
             </p>
-            <div class="flexbox">
+            <div class="cards space-between">
                 <a href="https://paulinengarten.de/">
                     <img src="img/paulinengarten.PNG" alt="">
                     <div></div>
@@ -98,7 +98,7 @@
     </div>
     
     <div class="margin">
-        <div class="centered-title">
+        <div class="text-center">
             <h2>WE CREATE WITH</h2>
         </div>
         <div id="carousel" class="carousel slide" data-ride="carousel">
@@ -147,9 +147,9 @@
                     <img src="img/D-logo.png" alt="">
                     <div>
                         <h3 class="text-white">Services</h3>
-                        <a href=""><p>Web Development</p></a>
-                        <a href=""><p>Social Media Marketing</p></a>
-                        <a href=""><p>Server Hosting</p></a>
+                        <a href="development.html"><p>Web Development</p></a>
+                        <a href="social.html"><p>Social Media Marketing</p></a>
+                        <a href="hosting.html"><p>Server Hosting</p></a>
                     </div>
                     <div>
                         <h3 class="text-white">Portfolio</h3>
@@ -158,7 +158,7 @@
                         <a href="https://www.amawaste.co.uk/"><p>AMA Waste Management</p></a>
                     </div>
                     <a href="https://github.com/JakobLinn/Webbprojekt">
-                        <img style="width: 80%;" src="img/githublogo-w.png" alt="">
+                        <img class="w-75" src="img/githublogo-w.png" alt="">
                         <h3 class="text-white">Visit Our Github!</h3>
                     </a>
                     <div>
