--- a/hosting.html
+++ b/hosting.html
@@ -8,6 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/in-view@0.6.1/dist/in-view.min.js"></script> <!-- in-view.js https://github.com/protonet/jquery.inview -->
+    <script src="javascript.js"></script>
     <link rel="Stylesheet" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
@@ -17,15 +19,47 @@
 </head>
 <body>
     <nav>
-        <img src="img/Deliver-v-logo.png" alt="">
-        <div class="text-white">☰</div>
+        <a href="index.html"><img class="h-100" src="img/Deliver-t-logo.png" alt=""></a>
+        <div class="text-white" id="menuToggle" onclick="menuToggle()">☰</div>
     </nav>
 
+    <div class="bg-primary h-100 w-100 text-center" id="fadein">
+        <img src="img/D-logo.png">
+    </div>
+
+    <div class="bg-dark h-100 w-100" id="menu">
+        <div class="text-center h-75 w-25 margin mb-5 pt-5 d-flex align-items-center justify-content-center">
+            <div class="menuHover">
+                <a class="text-white d-block" href="index.html">HOME</a>
+                <a class="text-white d-block" href="about.html">ABOUT</a>
+                <a class="text-white d-block border-bottom" id="dropdownToggle" onclick="dropdownToggle()" href="#">WE DO</a>
+                <div class="text-center" id="dropdown">
+                    <a class="text-white d-block" href="development.html">Web Development</a>
+                    <a class="text-white d-block" href="social.html">Social Media Marketing</a>
+                    <a class="text-white d-block" href="hosting.html">Server Hosting</a>
+                </div>
+                <a class="text-white d-block" href="contact.html">CONTACTS</a>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center text-center">
+            <div class="w-25 px-5">
+                <a href="https://instagram.com"><img class="icon" src="img/instagram.png" alt="instagram icon"></a>
+                <a href="https://twitter.com"><img class="icon" src="img/twitter.png" alt="twitter icon"></a>
+                <a href="https://facebook.com"><img class="icon" src="img/facebook.png" alt="facebook icon"></a>
+                <a href="https://linkedin.com"><img class="icon" src="img/linkedin.png" alt="linkedin icon"></a>
+                <a href="https://reddit.com"><img class="icon" src="img/reddit.png" alt="reddit icon"></a>
+            </div>
+        </div>
+    </div>
+
     <div class="bg-dark">
-        <header style="background-color: #FA4D3C;" class="w-100 space-between">
+        <header style="background-color: #FA4D3C;" class="space-between">
             <div>
                 <div class="row w-75">
-                    <h2 class="text-white col-7 pl-0 pb-3">Server Hosting</h2>
+                    <h2 id="outview" class="text-white col-7 pl-0 pb-3">Server Hosting</h2>
+                </div>
+                <div class="row w-75">
+                    <div class="line"></div>
                 </div>
                 <div class="row w-75">
                     <p class="col-8 text-white pl-0 pt-3">
@@ -35,6 +69,7 @@
                 </div>
             </div>
         </header>
+
         <div class="margin">
             <div class="row">
                 <div class="col-8">
@@ -54,7 +89,7 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="col contact">
+                <div id="inview" class="col contact">
                     <a class="text-white" href="contact.html">CONTACT US</a>
                 </div>
             </div>
